--- a/index.html
+++ b/index.html
@@ -12,15 +12,21 @@
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/4ee16d8c51.js" crossorigin="anonymous"></script>
     <!-- Fav Icon -->
-    <link rel="icon" type="image/x-icon" href="https://tse1.mm.bing.net/th?id=OIP.5MR9T4DygAiuwdvl3e5bGwHaFM&pid=Api&P=0&h=180">    <!-- CSS File -->
+    <link rel="icon" type="image/x-icon"
+        href="https://tse1.mm.bing.net/th?id=OIP.tSp2HqX4psYo4zSvqnGHGgHaHa&pid=Api&P=0&h=180">\
     <!-- CSS File -->
     <link rel="stylesheet" href="./style.css">
     <title>To-Do Lists</title>
 </head>
 
 <body>
+    <h2 id="users-information"> </h2>
+
     <div class="main-container">
-        <h1>To-Do List </h1>
+        <div class="logo">
+            <img src="https://tse2.mm.bing.net/th?id=OIP.vIlwIS-k6g6JeAIZnsLqvgHaHa&pid=Api&P=0&h=180" >
+            <h1>To-Do List </h1>
+        </div>
 
         <div class="input-btn-container">
             <input type="text" placeholder="Add Your Tasks Here" autofocus>
@@ -28,10 +34,47 @@
         </div>
 
         <ul class="task-list-container">
-             <p id="dummy-text">Your Tasks List Will be Displayed Here</p>
+
+            <!-- List will be added here dynamically -->
+
         </ul>
 
+    </div>
 
+    <div class="main-icons">
+        <i class="fa-solid fa-bell noti-btn" id="main-alert-btn"></i>
+        <i id="profile-button" class="fa-solid fa-user"></i>
+    </div>
+
+    <div class="profile-container">
+        <input type="text" placeholder="Enter Username" id="name" title="Enter User Name">
+
+        <select name="Gender" id="gender">
+            <option value="none">Gender</option>
+            <option value="male">Male</option>
+            <option value="female">Female</option>
+        </select>
+
+        <i id="close-profile-btn" class="fa-solid fa-xmark"></i>
+        <button id="save-btn">Save Profile <i class="fa-regular fa-floppy-disk"></i></button>
+        <button id="delete-btn">Delete Profile <i class="fa-solid fa-trash"></i></button>
+        <p class="error-message"></p>
+    </div>
+
+
+
+    <div class="noti-info-container">
+        <h4>You Will be Notified After the Time Being Provied</h4>
+        <label for="minutes-delay">Time ( Minutes )</label>
+        <input type="number" placeholder="Time in Minutes" id="minutes-delay" value="00" autofocus>
+        <button id="send-noti-btn">Send Alert <i class="fa-regular fa-bell"></i></button>
+        <i id="close-alertbox-btn" class="fa-solid fa-xmark"></i>
+        <p id="error-in-noti"></p>
+    </div>
+
+    <div class="alert-popup-box remove-alert">
+        <i class="fa-solid fa-circle-info"></i>
+        <h3 class="alert-popup ">  </h3>
     </div>
     <script src="./script.js"></script>
 </body>
