--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/4ee16d8c51.js" crossorigin="anonymous"></script>
     <!-- Fav Icon -->
-    <link rel="icon" type="image/x-icon"
-        href="https://tse1.mm.bing.net/th?id=OIP.tSp2HqX4psYo4zSvqnGHGgHaHa&pid=Api&P=0&h=180">\
+    <link rel="icon" type="image"
+        href="https://tse1.mm.bing.net/th?id=OIP.tSp2HqX4psYo4zSvqnGHGgHaHa&pid=Api&P=0&h=180">
     <!-- CSS File -->
     <link rel="stylesheet" href="./style.css">
     <title>To-Do Lists</title>
@@ -81,10 +81,11 @@
         <p id="error-in-noti"></p>
     </div>
 
-    <div class="alert-popup-box ">
+    <ul class="alert-popup-box ">
         <i class="fa-solid fa-circle-info"></i>
         <h3 class="alert-popup "> </h3>
-    </div>
+    </ul>
+    
     <script src="./script.js"></script>
 </body>
 
